# ucsflood

./: README.md  TODO  add_mhhw_slr.py  all  clump.py  drive.py  extract_mhhw.py  extract_sea_clumps.py  gdb_to_tiff.py  generate_worklist.py  interpolate_slr.py  inventory_dem.py  join_tides_transect.py  make_tile_index.py  merge_dem_to_region.py  merge_mhhw_to_region.py  regionlib.py  run_one_scenario_gcp.py  run_one_scenario_local.py  tides.py
cgalinterp/: cgalinterp.cpp  cgalinterp.cpp~  meson.build  pyproject.toml
code/: README.md  american_states.py  compare.py  gen_transects_z.py  get_dem_from_noaa.py  subtract.py  tile_lib.py  ucs_constants.py
code/docker/: provision_vm.py  requirements.txt  vm_startup_script
docker/: Dockerfile  daemon.json  push-docker-image
input/: isolated_areas.gpkg
input/dem/: README
input/mhhw/: README
input/tides/: README.md  ucs_level_02days.nc  ucs_level_04days.nc  ucs_level_12days.nc  ucs_level_26days.nc
input/transect/: transect-extended.gpkg  transect.gpkg
